fix button on firefox

--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -81,6 +81,7 @@
         .btn-outline {
           font-weight: 600;
           border: 1px solid #222;
+          width: max-content;
         }
         h1 {
           text-transform: uppercase;
